crates/reddb-server/tests/snapshots/schema_vocabulary_snapshots__lookup_accent_folded_variant_matches_passports.snap
---
source: crates/reddb-server/tests/schema_vocabulary_snapshots.rs
expression: "fmt_hits(\"pässpörts\", &hits)"
---
token: "pässpörts"
hit_count: 1
- collection: passports | column: None | type_tag: None
