crates/reddb-server/tests/snapshots/schema_vocabulary_snapshots__lookup_email_resolves_collection_and_index.snap
---
source: crates/reddb-server/tests/schema_vocabulary_snapshots.rs
expression: "fmt_hits(\"email\", &hits)"
---
token: "email"
hit_count: 2
- collection: users | column: Some("email") | type_tag: None
- collection: users | column: Some("email") | type_tag: Some("index:idx_users_email")
