crates/reddb-server/tests/snapshots/schema_vocabulary_snapshots__lookup_passport_resolves_collection.snap
---
source: crates/reddb-server/tests/schema_vocabulary_snapshots.rs
expression: "fmt_hits(\"passport\", &hits)"
---
token: "passport"
hit_count: 0
