crates/reddb-server/tests/snapshots/schema_vocabulary_snapshots__lookup_passports_resolves_collection.snap
---
source: crates/reddb-server/tests/schema_vocabulary_snapshots.rs
expression: "fmt_hits(\"passports\", &hits)"
---
token: "passports"
hit_count: 1
- collection: passports | column: None | type_tag: None
